--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   },
   "homepage": "https://github.com/omarashraf/wwh-environments#readme",
   "dependencies": {
+    "bcrypt": "^3.0.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "joi": "^14.3.0",
+    "jsonwebtoken": "^8.4.0",
+    "lodash": "^4.17.11",
     "mongoose": "^5.3.14"
   }
 }
